--- a/engine/package.json
+++ b/engine/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.678.0",
     "@types/express": "^5.0.0",
     "express": "^4.21.1",
     "redis": "^4.7.0"
