--- a/engine/package.json
+++ b/engine/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/uuid": "^10.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -12,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.678.0",
     "@types/express": "^5.0.0",
     "express": "^4.21.1",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "uuid": "^10.0.0"
   }
 }
