--- a/websocket/package.json
+++ b/websocket/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" :"tsc -b & node dist/index.js"
+    "build": "tsc -b",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@types/redis": "^4.0.10",
     "@types/ws": "^8.5.12",
     "redis": "^4.7.0",
+    "typescript": "^5.6.3",
     "ws": "^8.18.0"
   }
 }
