--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - redis
     ports:
       - "3000:3000"
-      
 
   engine:
     build:
@@ -26,3 +25,5 @@ services:
     container_name: websocketContainer
     depends_on:
       - redis
+    ports:
+      - "8080:8080"
