--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,14 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and Run Services
+      - name: Install Docker Compose
         run: |
-          docker-compose up -d --build
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+          docker compose version
+
+      - name: Build and Run Services
+        run: docker compose up -d --build
 
       - name: Run Health Checks
         run: |
@@ -35,4 +40,4 @@ jobs:
           curl -f http://localhost:8080 || exit 1
 
       - name: Stop and Clean Docker
-        run: docker-compose down
+        run: docker compose down
