--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,17 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Build and Run Services
-        run: docker compose up -d --build
+        run: docker-compose up -d --build
+
+      - name: Wait for Services to Start
+        run: sleep 15
+
+      - name: Print Docker Logs
+        run: docker-compose logs server
 
       - name: Run Health Checks
         run: |
           curl -f http://localhost:3000/health || exit 1
 
       - name: Stop and Clean Docker
-        run: docker compose down
+        run: docker-compose down
