--- a/websocket/Dockerfile
+++ b/websocket/Dockerfile
@@ -1,14 +1,24 @@
-FROM node:20
+#Builder stage 
 
-WORKDIR /app
+FROM node:20-alpine AS builder 
+
+WORKDIR app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install 
 
 COPY . .
 
 RUN npm run build
 
+# running Stage
 
-CMD ["npm", "run", "start"]
+FROM node:20-alpine 
+
+WORKDIR app
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder  /app/dist      ./dist
+
+CMD ["node","dist/index.js"]
