--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "sonner": "^1.7.4",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
